--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "require": {
         "php": ">=5.3.0",
         "symfony/http-kernel": "~2.4",
-        "desarrolla2/cache": "v1.7.0"
+        "desarrolla2/cache": "v1.7.0",
+        "illuminate/container": "4.1.x-dev"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
