--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require": {
         "php": ">=5.3.0",
-        "symfony/http-kernel": "~2.4",
+        "symfony/http-foundation": "~2.4",
         "desarrolla2/cache": "v1.7.0",
         "illuminate/container": "4.1.x-dev"
     },
